tests/snapshots/snapshot_tests__snapshot_metadata_with_counts.snap
---
source: tests/snapshot_tests.rs
expression: metadata
---
Metadata {
    event_count: Some(
        3,
    ),
    drop_count: Some(
        42,
    ),
}
