tests/snapshots/snapshot_tests__snapshot_single_edge_report.snap
---
source: tests/snapshot_tests.rs
assertion_line: 247
expression: json
---
cascade:
  edges:
    - attributed_delay_ms: 2
      dst: 201
      raw_wait_ms: 2
      src: 101
  graph_metrics:
    edge_count: 1
    invariants_ok: true
    node_count: 2
    total_attributed_delay_ms: 2
    total_raw_wait_ms: 2
critical_path:
  chain:
    - members:
        - 101
      weight: 2
    - members:
        - 201
      weight: 2
  total_weight: 6
health:
  attributed_delay_ratio: ~
  cascade_depth_truncation_count: ~
  drop_count: 5
  false_wakeup_filtered_count: 0
  invariants_ok: true
  io_orphan_complete_count: 0
  io_pending_at_end_count: 0
  io_userspace_pair_collision_count: 0
  partial_stack_count: ~
  unmatched_wakeup_count: 0
knots: []
stats:
  correlation:
    edges_created: 1
    events_processed: 3
    false_wakeup_filtered_count: 0
    io_orphan_complete_count: 0
    io_pending_at_end_count: 0
    io_userspace_pair_collision_count: 0
    switch_in_without_waker_count: 0
    unknown_event_type_count: 0
    unmatched_switch_in_count: 1
    unmatched_wakeup_count: 0
  events_read: 3
