tests/snapshots/snapshot_tests__snapshot_single_switch_event.snap
---
source: tests/snapshot_tests.rs
expression: parsed
---
[
    WperfEvent {
        timestamp_ns: 1000000,
        pid: 100,
        tid: 101,
        prev_tid: 101,
        next_tid: 202,
        prev_pid: 100,
        next_pid: 200,
        cpu: 0,
        event_type: 1,
        prev_state: 1,
        flags: 0,
    },
]
