tests/snapshots/snapshot_tests__snapshot_unmatched_wakeup_report.snap
---
source: tests/snapshot_tests.rs
assertion_line: 256
expression: json
---
cascade:
  edges: []
  graph_metrics:
    edge_count: 0
    invariants_ok: true
    node_count: 0
    total_attributed_delay_ms: 0
    total_raw_wait_ms: 0
critical_path: ~
health:
  cascade_depth_truncation_count: ~
  drop_count: 0
  false_wakeup_filtered_count: 0
  invariants_ok: true
  partial_stack_count: ~
  unmatched_wakeup_count: 1
knots: []
stats:
  correlation:
    edges_created: 0
    events_processed: 1
    false_wakeup_filtered_count: 0
    switch_in_without_waker_count: 0
    unknown_event_type_count: 0
    unmatched_switch_in_count: 0
    unmatched_wakeup_count: 1
  events_read: 1
